--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+}
+
 :root {
   font-family: Poppins, Arial, sans-serif;
   font-weight: 400;
@@ -16,3 +20,6 @@ body {
   min-height: 100vh;
 }
 
+a {
+  text-decoration: none;
+}
