--- a/src/Components/CartItems/CartItems.module.scss
+++ b/src/Components/CartItems/CartItems.module.scss
@@ -10,7 +10,7 @@
 
 .formatMain {
   display: grid;
-  grid-template-columns: 0.5fr 2fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 0.5fr 2fr 1fr 1fr 1fr 1fr 1fr;
   align-items: center;
   gap: 75px;
   padding: 20px 0;
