--- a/src/Pages/CSS/ShopCategory.module.scss
+++ b/src/Pages/CSS/ShopCategory.module.scss
@@ -2,6 +2,11 @@
   display: block;
   margin: 30px auto;
   width: 82%;
+
+  background-color: #313131;
+  background-image: radial-gradient(rgba(255, 255, 255, 0.171) 2px, transparent 0);
+  background-size: 30px 30px;
+  background-position: -5px -5px
 }
 
 .indexSort {
