--- a/src/Components/CartItems/CartItems.module.scss
+++ b/src/Components/CartItems/CartItems.module.scss
@@ -60,16 +60,106 @@
   padding: 15px 0;
 }
 
-.total button {
+.checkoutBtn {
   width: 262px;
   height: 58px;
   outline: none;
   border: none;
-  background: #FF4141;
-  color: #fff;
   font-size: 16px;
   font-weight: 600;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  position: relative;
+  padding: 1em 1.8em;
+  background: #FF7235;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  overflow: hidden;
+  transition: 0.2s;
+}
+
+.checkoutBtn:hover {
+  box-shadow: 0 0 10px #FF7235, 0 0 25px red, 0 0 50px #FF7235;
+  transition-delay: .03s;
+}
+
+.checkoutBtn span {
+  position: absolute;
+}
+
+.checkoutBtn span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #FF7235);
+}
+
+.checkoutBtn:hover span:nth-child(1) {
+  left: 100%;
+  transition: 0.7s;
+}
+
+.checkoutBtn span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, red);
+}
+
+.checkoutBtn:hover span:nth-child(3) {
+  right: 100%;
+  transition: 0.7s;
+  transition-delay: 0.35s;
+}
+
+.checkoutBtn span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #FF7235);
+}
+
+.checkoutBtn:hover span:nth-child(2) {
+  top: 100%;
+  transition: 0.7s;
+  transition-delay: 0.17s;
+}
+
+.checkoutBtn span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, red);
+}
+
+.checkoutBtn:hover span:nth-child(4) {
+  bottom: 100%;
+  transition: 0.7s;
+  transition-delay: 0.52s;
+}
+
+.checkoutBtn:active {
+  background: #ae00af;
+  background: linear-gradient(to top right, #ae00af, red);
+  color: #bfbfbf;
+  box-shadow: 0 0 8px #FF7235, 0 0 8px red, 0 0 8px #FF7235;
+  transition: 0.1s;
+}
+
+.checkoutBtn:active span:nth-child(1)
+span:nth-child(2)
+span:nth-child(2)
+span:nth-child(2) {
+  transition: none;
+  transition-delay: none;
 }
 
 .promoCode {
