--- a/src/Components/Hero/Hero.module.scss
+++ b/src/Components/Hero/Hero.module.scss
@@ -1,7 +1,12 @@
 .hero {
-  height: 100vh;
-  background: linear-gradient(180deg, #fde1ff, #e1ffea22 60%);
   display: flex;
+
+  width: 100%;
+  height: 100%;
+  background-color: #313131;
+  background-image: radial-gradient(rgba(255, 255, 255, 0.171) 2px, transparent 0);
+  background-size: 30px 30px;
+  background-position: -5px -5px
 }
 
 .heroLeft {
@@ -15,13 +20,13 @@
 }
 
 .heroLeft h2 {
-  color: #090909;
   font-size: 26px;
   font-weight: 600;
+  color: #d0d0d0;
 }
 
 .heroLeft p {
-  color: #171717;
+  color: #d0d0d0;
   font-size: 100px;
   font-weight: 700;
 }
@@ -32,8 +37,8 @@
   gap: 20px;
 }
 
-.handIcon img {
-  width: 105px;
+.handIcon p {
+  color: #d0d0d0;
 }
 
 .heroLatestBtn {
@@ -45,10 +50,99 @@
   height: 70px;
   border-radius: 75px;
   margin-top: 30px;
-  background: #FF4141;
-  color: white;
   font-size: 22px;
   font-weight: 500;
+  position: relative;
+  padding: 1em 1.8em;
+  outline: none;
+  border: none;
+  background: #FF7235;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  overflow: hidden;
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+.heroLatestBtn:hover {
+  box-shadow: 0 0 10px #FF7235, 0 0 25px red, 0 0 50px #FF7235;
+  transition-delay: .03s;
+}
+
+.heroLatestBtn span {
+  position: absolute;
+}
+
+.heroLatestBtn span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #FF7235);
+}
+
+.heroLatestBtn:hover span:nth-child(1) {
+  left: 100%;
+  transition: 0.7s;
+}
+
+.heroLatestBtn span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, red);
+}
+
+.heroLatestBtn:hover span:nth-child(3) {
+  right: 100%;
+  transition: 0.7s;
+  transition-delay: 0.35s;
+}
+
+.heroLatestBtn span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #FF7235);
+}
+
+.heroLatestBtn:hover span:nth-child(2) {
+  top: 100%;
+  transition: 0.7s;
+  transition-delay: 0.17s;
+}
+
+.heroLatestBtn span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, red);
+}
+
+.heroLatestBtn:hover span:nth-child(4) {
+  bottom: 100%;
+  transition: 0.7s;
+  transition-delay: 0.52s;
+}
+
+.heroLatestBtn:active {
+  background: #ae00af;
+  background: linear-gradient(to top right, #ae00af, red);
+  color: #bfbfbf;
+  box-shadow: 0 0 8px #FF7235, 0 0 8px red, 0 0 8px #FF7235;
+  transition: 0.1s;
+}
+
+.heroLatestBtn:active span:nth-child(1)
+span:nth-child(2)
+span:nth-child(2)
+span:nth-child(2) {
+  transition: none;
+  transition-delay: none;
 }
 
 .heroRight {
