--- a/src/Components/Offers/Offer.module.scss
+++ b/src/Components/Offers/Offer.module.scss
@@ -1,11 +1,15 @@
 .offers {
   width: 65%;
-  height: 60vh;
   display: flex;
   margin: auto;
   padding: 0 140px;
   margin-bottom: 150px;
-  background: linear-gradient(180deg, #fde1ff 0%, #e1ffea22 60%);
+
+  height: 100%;
+  background-color: #313131;
+  background-image: radial-gradient(rgba(255, 255, 255, 0.171) 2px, transparent 0);
+  background-size: 30px 30px;
+  background-position: -5px -5px
 }
 
 .offersLeft {
@@ -16,28 +20,119 @@
 }
 
 .offersLeft h1 {
-  color: #171717;
+  color: #d0d0d0;;
   font-size: 80px;
   font-weight: 800;
 }
 
 .offersLeft p {
-  color: #171717;
+  color: #d0d0d0;;
   font-size: 22px;
   font-weight: 600;
 }
 
-.offersLeft button {
+.offersBtn {
   width: 282px;
   height: 70px;
-  border-radius: 35px;
-  background: #FF4141;
   border: none;
   color: white;
   font-size: 22px;
   font-weight: 500;
   margin-top: 30px;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  border-radius: 75px;
+  position: relative;
+  padding: 1em 1.8em;
+  outline: none;
+  background: #FF7235;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  overflow: hidden;
+  transition: 0.2s;
+}
+
+.offersBtn:hover {
+  box-shadow: 0 0 10px #FF7235, 0 0 25px red, 0 0 50px #FF7235;
+  transition-delay: .03s;
+}
+
+.offersBtn span {
+  position: absolute;
+}
+
+.offersBtn span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #FF7235);
+}
+
+.offersBtn:hover span:nth-child(1) {
+  left: 100%;
+  transition: 0.7s;
+}
+
+.offersBtn span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, red);
+}
+
+.offersBtn:hover span:nth-child(3) {
+  right: 100%;
+  transition: 0.7s;
+  transition-delay: 0.35s;
+}
+
+.offersBtn span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #FF7235);
+}
+
+.offersBtn:hover span:nth-child(2) {
+  top: 100%;
+  transition: 0.7s;
+  transition-delay: 0.17s;
+}
+
+.offersBtn span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, red);
+}
+
+.offersBtn:hover span:nth-child(4) {
+  bottom: 100%;
+  transition: 0.7s;
+  transition-delay: 0.52s;
+}
+
+.offersBtn:active {
+  background: #ae00af;
+  background: linear-gradient(to top right, #ae00af, red);
+  color: #bfbfbf;
+  box-shadow: 0 0 8px #FF7235, 0 0 8px red, 0 0 8px #FF7235;
+  transition: 0.1s;
+}
+
+.offersBtn:active span:nth-child(1)
+span:nth-child(2)
+span:nth-child(2)
+span:nth-child(2) {
+  transition: none;
+  transition-delay: none;
 }
 
 .offersRight {
