--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -1,4 +1,5 @@
 .navbar {
+  position: relative;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -13,7 +14,6 @@
 }
 
 .img {
-
   object-fit: cover;
 }
 
@@ -21,34 +21,42 @@
   color: #171717;
   font-size: 38px;
   font-weight: 600;
+
+  @media screen and (max-width: 1024px) {
+    font-size: 30px;
+  }
+
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
 
-.navMenu {
-  padding: 10px 35px;
+.navMenu,
+.menuBurgerList {
   display: flex;
   align-items: center;
   list-style: none;
-  gap: 50px;
   color: #626262;
   font-size: 20px;
   font-weight: 500;
+  padding: 10px 35px;
 
   background-color: rgba(49, 49, 49);
   height: 30px;
-  justify-content: space-around;
   border-radius: 30px;
-  box-shadow: rgba(49, 49, 49) 0px 5px 15px,
-  rgba(49, 49, 49, 1) 5px 10px 15px;
+
+  @media screen and (max-width: 1300px) {
+    display: none;
+  }
+}
+
+.navMenu {
+  gap: 50px;
+  justify-content: space-around;
 }
 
 
 .navMenu li {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 3px;
-  cursor: pointer;
   transition: transform 0.2s ease-in-out;
 
   &:hover {
@@ -56,27 +64,24 @@
   }
 }
 
-.navMenu hr {
-  border: none;
-  width: 80%;
-  height: 3px;
-  border-radius: 10px;
-  background: #212121;
-}
-
-.menuLink {
+.menuLink,
+.burgerItem {
   color: #FF7235;
 }
 
 .navLoginCart {
   display: flex;
   align-items: center;
-  gap: 45px
+  gap: 45px;
+
+  @media screen and (max-width: 1300px) {
+    display: none;
+  }
 }
 
-.loginBtn {
+.loginBtn,
+.burgerLoginBtn {
   width: 157px;
-  height: 58px;
   outline: none;
   border-radius: 75px;
   font-size: 20px;
@@ -87,7 +92,7 @@
   align-items: center;
   gap: 15px;
   position: relative;
-  padding: 1em 1.8em;
+  padding: 12.5px 10px;
   border: 1px solid #303030;
   background: rgba(49, 49, 49);
   color: #FF7235;
@@ -177,16 +182,95 @@ span:nth-child(2) {
   transition-delay: none;
 }
 
-.navCartCount {
+.navCartCount,
+.navCartCountBurger {
   width: 22px;
   height: 22px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: -35px;
-  margin-left: -55px;
   border-radius: 11px;
   font-size: 14px;
   background: red;
   color: white;
+}
+
+.navCartCount {
+  margin-top: -35px;
+  margin-left: -55px;
+}
+
+.navCartCountBurger {
+  margin-left: -90px;
+}
+
+.burger {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 35px;
+  height: 25px;
+  cursor: pointer;
+
+  @media screen and (max-width: 1300px) {
+    display: flex;
+  }
+}
+
+.burger span{
+  height: 2px;
+  background-color: black;
+}
+
+.burger span:nth-of-type(2) {
+  width: 20px;
+}
+
+// Menu Burger
+.menuBurger {
+  width: 300px;
+  height: 100vh;
+  padding: 40px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+  background-color: rgba(49, 49, 49);
+  animation: transform 1s;
+}
+
+@keyframes transform {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+.closeButton {
+  align-self: end;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.wrapperBurgerLogin {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.burgerLoginBtn {
+  border: 1px solid #FF7235;
+}
+
+.menuBurgerList {
+  display: flex;
+  flex-direction: column;
+  padding: 10px 35px;
+  gap: 20px;
 }
