--- a/src/Components/NewsLetter/NewsLetter.module.scss
+++ b/src/Components/NewsLetter/NewsLetter.module.scss
@@ -1,31 +1,47 @@
 .newsLetter {
-  width: 65%;
-  height: 40vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: auto;
-  padding: 0 140px;
+  padding: 20px 140px;
   margin-bottom: 150px;
-  background: linear-gradient(180deg, #fde1ff 0%, #e1ffea22 60%);
   gap: 30px;
-
+  text-align: center;
   background-color: #313131;
   background-image: radial-gradient(rgba(255, 255, 255, 0.171) 2px, transparent 0);
   background-size: 30px 30px;
-  background-position: -5px -5px
+  background-position: -5px -5px;
+
+  @media screen and (max-width: 1024px) {
+    padding: 20px 70px;
+  }
+
+  @media screen and (max-width: 600px) {
+    padding: 20px 15px;
+  }
 }
 
 .newsLetter h1 {
   color: #d0d0d0;;
   font-size: 55px;
   font-weight: 600;
+
+  @media screen and (max-width: 1024px) {
+    font-size: 45px;
+  }
+
+  @media screen and (max-width: 600px) {
+    font-size: 35px;
+  }
 }
 
 .newsLetter p {
   color: #d0d0d0;;
   font-size: 20xp;
+
+  @media screen and (max-width: 600px) {
+    font-size: 17px;
+  }
 }
 
 .newsLetter div {
@@ -33,14 +49,16 @@
   align-items: center;
   justify-content: space-between;
   background: white;
-  width: 730px;
+  max-width: 730px;
+  width: 100%;
   height: 70px;
   border-radius: 80px;
   border: 1px solid #e3e3e3;
 }
 
 .newsLetter input {
-  width: 500px;
+  max-width: 500px;
+  width: 100%;
   margin-left: 30px;
   border: none;
   outline: none;
