--- a/src/Components/NewsLetter/NewsLetter.module.scss
+++ b/src/Components/NewsLetter/NewsLetter.module.scss
@@ -14,6 +14,7 @@
 
   @media screen and (max-width: 1024px) {
     padding: 20px 70px;
+    margin-bottom: 70px;
   }
 
   @media screen and (max-width: 600px) {
