--- a/src/Components/Offers/Offer.module.scss
+++ b/src/Components/Offers/Offer.module.scss
@@ -15,6 +15,7 @@
     width: auto;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 70px;
   }
 }
 
@@ -80,7 +81,7 @@
   letter-spacing: 2px;
   overflow: hidden;
   transition: 0.2s;
-  
+
   @media screen and (max-width: 1024px) {
     font-size: 18px;
   }
