--- a/src/Components/Breadcrumbs/Breadcrumb.module.scss
+++ b/src/Components/Breadcrumbs/Breadcrumb.module.scss
@@ -7,4 +7,10 @@
   font-weight: 600;
   margin: 60px 170px;
   text-transform: capitalize;
+
+  @media screen and (max-width: 1330px) {
+    margin: 20px 15px;
+    justify-content: center;
+    font-size: 16px;
+  }
 }
