--- a/src/Components/ProductDisplay/ProductDisplay.module.scss
+++ b/src/Components/ProductDisplay/ProductDisplay.module.scss
@@ -1,17 +1,37 @@
 .productDisplay {
   display: flex;
   margin: 0 170px;
+
+  @media screen and (max-width: 1330px) {
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    margin: 0 20px 40px 20px;
+  }
 }
 
 .displayLeft {
   display: flex;
   gap: 17px;
+  max-width: 100%;
+  max-height: 100%;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
 .imgList {
   display: flex;
   flex-direction: column;
   gap: 16px;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: row;
+    order: 2;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
 }
 
 .imgList img {
@@ -21,6 +41,11 @@
 .mainImg {
   width: 586px;
   height: 700px;
+
+  @media screen and (max-width: 768px) {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 .displayRight {
@@ -33,6 +58,10 @@
   color: #3d3d3d;
   font-size: 40px;
   font-weight: 700;
+
+  @media screen and (max-width: 768px) {
+    font-size: 25px;
+  }
 }
 
 .rightStar {
