--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -232,6 +232,7 @@ span:nth-child(2) {
   height: 100vh;
   padding: 40px;
   position: absolute;
+  z-index: 10;
   top: 0;
   right: 0;
   display: flex;
