--- a/src/Components/RelatedProducts/RelatedProducts.module.scss
+++ b/src/Components/RelatedProducts/RelatedProducts.module.scss
@@ -3,13 +3,17 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  height: 90vh;
+  margin-bottom: 50px;
 }
 
 .relatedProduct h1 {
   color: #171717;
   font-size: 50px;
   font-weight: 600;
+
+  @media screen and (max-width: 600px) {
+    font-size: 40px;
+  }
 }
 
 .relatedProduct hr {
@@ -22,5 +26,7 @@
 .item {
   margin-top: 50px;
   display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
   gap: 30px;
 }
