--- a/src/Pages/CSS/LoginSignUp.module.scss
+++ b/src/Pages/CSS/LoginSignUp.module.scss
@@ -1,12 +1,16 @@
 .loginSignUp {
   width: 100%;
   height: 80vh;
-  background: #fce3fe;
   padding-top: 100px;
+
+  background-color: #313131;
+  background-image: radial-gradient(rgba(255, 255, 255, 0.171) 2px, transparent 0);
+  background-size: 30px 30px;
+  background-position: -5px -5px;
 }
 
 .container {
-  width: 580px;
+  max-width: 580px;
   height: 600px;
   background: white;
   margin: auto;
@@ -26,7 +30,6 @@
 
 .fields input {
   height: 72px;
-  width: 100%;
   padding-left: 20px;
   border: 1px solid #c9c9c9;
   outline: none;
@@ -34,16 +37,117 @@
   font-size: 18px;
 }
 
-.container button {
-  width: 580px;
+.continueButton {
+  max-width: 580px;
+  width: 100%;
   height: 72px;
   color: white;
-  background: #FF4141;
   margin-top: 30px;
   border: none;
   font-size: 24px;
   font-weight: 500;
   cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  position: relative;
+  padding: 1em 1.8em;
+  outline: none;
+  background: #FF7235;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  overflow: hidden;
+  transition: 0.2s;
+
+  @media screen and (max-width: 1024px) {
+    font-size: 18px;
+  }
+
+  @media screen and (max-width: 600px) {
+    font-size: 15px;
+  }
+}
+
+.continueButton:hover {
+  box-shadow: 0 0 10px #FF7235, 0 0 25px red, 0 0 50px #FF7235;
+  transition-delay: .03s;
+}
+
+.continueButton span {
+  position: absolute;
+}
+
+.continueButton span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #FF7235);
+}
+
+.heroLatestBtn:hover span:nth-child(1) {
+  left: 100%;
+  transition: 0.7s;
+}
+
+.continueButton span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, red);
+}
+
+.continueButton:hover span:nth-child(3) {
+  right: 100%;
+  transition: 0.7s;
+  transition-delay: 0.35s;
+}
+
+.continueButton span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #FF7235);
+}
+
+.continueButton:hover span:nth-child(2) {
+  top: 100%;
+  transition: 0.7s;
+  transition-delay: 0.17s;
+}
+
+.continueButton span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, red);
+}
+
+.continueButton:hover span:nth-child(4) {
+  bottom: 100%;
+  transition: 0.7s;
+  transition-delay: 0.52s;
+}
+
+.continueButton:active {
+  background: #ae00af;
+  background: linear-gradient(to top right, #ae00af, red);
+  color: #bfbfbf;
+  box-shadow: 0 0 8px #FF7235, 0 0 8px red, 0 0 8px #FF7235;
+  transition: 0.1s;
+}
+
+.continueButton:active span:nth-child(1)
+span:nth-child(2)
+span:nth-child(2)
+span:nth-child(2) {
+  transition: none;
+  transition-delay: none;
 }
 
 .login {
