--- a/src/Components/ProductDisplay/ProductDisplay.module.scss
+++ b/src/Components/ProductDisplay/ProductDisplay.module.scss
@@ -87,7 +87,7 @@
 }
 
 .rightNewPrice {
-  color: #FF4141;
+  color: #FF7235;
 }
 
 .rightSizes {
@@ -115,17 +115,117 @@
   box-shadow: 0px 0px 3px 0px;
 }
 
-.displayRight button {
+.addButton {
   padding: 20px 40px;
   width: 200px;
   font-size: 16px;
   font-weight: 600;
   color: white;
-  background: #FF4141;
   margin-bottom: 40px;
   border: none;
   outline: none;
   cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  height: 70px;
+  margin-top: 30px;
+  position: relative;
+  background: #FF7235;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  overflow: hidden;
+  transition: 0.2s;
+
+  @media screen and (max-width: 1024px) {
+    font-size: 18px;
+  }
+
+  @media screen and (max-width: 600px) {
+    font-size: 15px;
+  }
+}
+
+.addButton:hover {
+  box-shadow: 0 0 10px #FF7235, 0 0 25px red, 0 0 50px #FF7235;
+  transition-delay: .03s;
+}
+
+.addButton span {
+  position: absolute;
+}
+
+.addButton span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #FF7235);
+}
+
+.addButton:hover span:nth-child(1) {
+  left: 100%;
+  transition: 0.7s;
+}
+
+.addButton span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, red);
+}
+
+.addButton:hover span:nth-child(3) {
+  right: 100%;
+  transition: 0.7s;
+  transition-delay: 0.35s;
+}
+
+.addButton span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #FF7235);
+}
+
+.addButton:hover span:nth-child(2) {
+  top: 100%;
+  transition: 0.7s;
+  transition-delay: 0.17s;
+}
+
+.addButton span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, red);
+}
+
+.addButton:hover span:nth-child(4) {
+  bottom: 100%;
+  transition: 0.7s;
+  transition-delay: 0.52s;
+}
+
+.addButton:active {
+  background: #ae00af;
+  background: linear-gradient(to top right, #ae00af, red);
+  color: #bfbfbf;
+  box-shadow: 0 0 8px #FF7235, 0 0 8px red, 0 0 8px #FF7235;
+  transition: 0.1s;
+}
+
+.addButton:active span:nth-child(1)
+span:nth-child(2)
+span:nth-child(2)
+span:nth-child(2) {
+  transition: none;
+  transition-delay: none;
 }
 
 .rightCategory {
