--- a/src/Pages/CSS/ShopCategory.module.scss
+++ b/src/Pages/CSS/ShopCategory.module.scss
@@ -10,6 +10,7 @@
 }
 
 .indexSort {
+  position: relative;
   display: flex;
   margin: 0 170px;
   justify-content: space-between;
@@ -22,11 +23,12 @@
 }
 
 .sort {
-  max-width: 75px;
-  width: 100%;
+  font-size: 18px;
   padding: 10px 20px;
   border-radius: 40px;
   border: 1px solid #888;
+  background: transparent;
+  cursor: pointer;
 }
 
 .indexSort p span {
@@ -54,6 +56,58 @@
   }
 }
 
+//DropDown
+
+.dropDown {
+  padding: 20px;
+  max-width: 200px;
+  height: auto;
+  overflow: hidden;
+  position: absolute;
+  top: 45px;
+  right: 0;
+  z-index: 10;
+  background: #313131;
+  border-radius: 20px;
+  animation: transformOpen 0.5s ease-in-out;
+}
+
+@keyframes transformOpen {
+  0% {
+    max-height: 0;
+  }
+  100% {
+    max-height: 200px;
+  }
+}
+
+.dropDownList {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  list-style: none;
+}
+
+.dropDownItem {
+  color: white;
+  font-size: 18px;
+  font-weight: 500;
+  animation: opacity 1s ease-in-out;
+  cursor: pointer;
+}
+
+
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .loadMore {
   display: flex;
   justify-content: center;
@@ -62,6 +116,8 @@
   width: 233px;
   height: 69px;
   border-radius: 75px;
+  outline: none;
+  cursor: pointer;
   background: #ededed;
   color: #787878;
   font-size: 18px;
